--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 site:
-  title: Portfolio de Sylvain P.
+  title: Portfolio de Sylvain
 
 menu:
 - {name: 'Portfolio', url: ''}
